update patches after server upgrade. change order of client search results to use display name.

--- a/api-docs/apiLive.htm
+++ b/api-docs/apiLive.htm
@@ -873,7 +873,7 @@ Request Body:
                 <table class=matrixHeading>
                     <tr class="matrixHeadingBG"><td><div class="mifosXHeading2">Field Descriptions</div></td></tr>
                     <tr class=alt><td>principal</td></tr>
-                    <tr><td class=fielddesc>Loan amount.</td></tr>
+                    <tr><td class=fielddesc>The amount to be provided in the loan.</td></tr>
                     <tr class=alt><td>externalId</td></tr>
                     <tr><td class=fielddesc>A place to put an external reference for this loan e.g. The ID another system uses.<br>
                     If provided, it must be unique.</td></tr>
